<resources>
    <string name="app_name">TaskTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <!-- menu nav -->
    <string name="menu_nav_projects">Проекты</string>
    <string name="menu_nav_tasks">Задания</string>
    <string name="menu_nav_profiles">Профиль</string>
    <string name="menu_nav_settings">Настройки</string>
    <string name="menu_nav_search">Поиск</string>

    <!-- fragment task -->
    <string name="fragment_task_title">Заголовок</string>
    <string name="fragment_task_description">Описание</string>

    <!-- menu task list -->
    <string name="menu_task_list_create">Создать задание</string>
    <string name="menu_task_list_category">Виды заданий</string>
    <string name="menu_task_list_search">Поиск заданий</string>

</resources>
