<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_business_center_black_24dp"
            android:title="@string/menu_nav_projects"/>
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_view_list_black"
            android:title="@string/menu_nav_tasks"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_nav_search"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_nav_profiles"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_nav_settings"/>
    </group>
</menu>
